[package]
name = "iota-sc-hname-generator"
version = "1.0.0"
description = "Generates hashes for function, parameter,and variable names necessary to work with IOTA Smart contracts"
authors = ["Th3B0Y <constantlychanging@pm.me>"]
license = "MIT"
keywords = ["iota", "smart-contract", "smartcontract","hname", "cryptocurrency", "iot"]
edition = "2018"
repository = "https://github.com/brunoamancio/IOTA-SC-HName-Generator/"
categories = ["cryptography::cryptocurrencies", "algorithms", "development-tools"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = "1.0.63"
blake2 = "0.9.1"
