[package]
name = "iota-sc-hname-generator"
version = "1.1.5"
description = "Generates hashes for function, parameter,and variable names necessary to work with IOTA Smart contracts"
authors = ["Th3B0Y <constantlychanging@pm.me>"]
license = "MIT"
keywords = ["iota", "smart-contract", "smartcontract","hname", "cryptocurrency"]
edition = "2018"
repository = "https://github.com/brunoamancio/IOTA-SC-HName-Generator/"
categories = ["cryptography::cryptocurrencies", "algorithms", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = "^1.0.61"
blake2 = "0.9.1"
